--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@ h1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-transform: uppercase;
 }
+
+body{
+    background-color: beige;
+    margin-top:100px;
+}
