--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
-p{
+p{  
+    padding-top: 10px;
+    background-color: bisque;
     text-align: center;
     color:firebrick;
 }
 h1{ 
-    padding:100px;
+    padding:50px;
     margin-bottom: 100px;
     background-color: yellowgreen;
     text-align: center;
